fix: scrollbar style on firefox

--- a/src/content/scrollbar.less
+++ b/src/content/scrollbar.less
@@ -22,3 +22,8 @@
 											  transparent 75%,
 											  transparent)
 }
+
+// for firefox
+html {
+	scrollbar-width: thin;
+}
